fix submit button alignment

--- a/css/style.css
+++ b/css/style.css
@@ -393,14 +393,12 @@ header {
 .contact-form button {
   align-self: flex-start;
   margin-left: 25px;
-  width: max-content;
-  height: auto;
   font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 17px;
   line-height: 36px;
-  color: #6070FF;
+  color: #6070ff;
   background-color: #fff;
   border-radius: 8px;
   width: 150px;
